Exception and general response operations were moved to a central structure.